# tauri-translucent-desktop-overlay

./: .gitignore  Cargo.toml  README.md  demo.sh  hud_config.json  hud_text.txt  index.html  package.json  pnpm-lock.yaml  setup.sh
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
